Hide UI elements for disallowed actions

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -16,10 +16,11 @@
   = product.category.name
 
 %h3 Reviews
-= render 'reviews/form'
+= render 'reviews/form' if user_signed_in?
 
 = render reviews
 
-= link_to 'Edit', edit_category_product_path(category.id, product.id)
-\|
+- if user_signed_in? && product.user == current_user
+  = link_to 'Edit', edit_category_product_path(category.id, product.id)
+  \|
 = link_to 'Back', category_products_path, class: 'btn btn-primary'
