--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,8 +13,8 @@
       .container-fluid
         .navbar-header
           %span.navbar-brand Netguru Kraków Workshops 2014
-        %p.navbar-text.navbar-right
-          Links should go here
+        %ul.nav.navbar-nav.navbar-right
+          = render 'navigation'
     .container-fluid
       .row
         .col-lg-12
