--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -1,8 +1,11 @@
 - if user_signed_in?
+
   %li
-    = link_to('Logout', destroy_user_session_path, method: :delete)
+    = link_to current_user.email, edit_user_registration_path, class: 'text-bold'
+  %li
+    = link_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }
 - else
-  %li 
-    = link_to('Login', new_user_session_path)
-  %li 
-    = link_to('Register', new_user_registration_path)
+  %li
+    = link_to 'Login', new_user_session_path
+  %li
+    = link_to 'Sign up', new_user_registration_path
