--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,19 +1,21 @@
 %h1 Listing categories
 
-%table.table
-  %tr
-    %th Name
-    %th
-    %th
-    %th
-
-  - categories.each do |category|
+%table.table.table-striped
+  %thead
     %tr
-      %td= category.name
-      %td= link_to 'Show', category
-      %td= link_to 'Edit', edit_category_path(category) if user_signed_in? && current_user.admin
-      %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } if user_signed_in? && current_user.admin
+      %th Name
+      %th
+      %th
+      %th
+
+  %tbody
+    - categories.each do |category|
+      %tr
+        %td= link_to category.name, category
+        %td= link_to 'Show', category, class: 'btn btn-success'
+        %td= link_to 'Edit', edit_category_path(category), class: 'btn btn-warning' if user_signed_in? && current_user.admin
+        %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' if user_signed_in? && current_user.admin
 
 %br
 
-= link_to 'New Category', new_category_path if user_signed_in? && current_user.admin
+= link_to 'New Category', new_category_path, class: 'btn btn-info' if user_signed_in? && current_user.admin
