--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,16 @@
 %h2 Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, required: true, autofocus: true
-    = f.input :firstname, required: true
-    = f.input :lastname, required: true
-    = f.input :password, required: true
-    = f.input :password_confirmation, required: true
-  .form-actions
-    = f.button :submit, "Sign up"
-= render "devise/shared/links"
+%div.row.panel
+  %div.col-md-4.col-md-offset-4
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = f.error_notification
+      .form-inputs
+        = f.input :email, required: true, autofocus: true
+        = f.input :firstname, required: true
+        = f.input :lastname, required: true
+        = f.input :password, required: true
+        = f.input :password_confirmation, required: true
+      .form-actions
+        = f.button :submit, "Sign up"
+
+    %br
+    = render "devise/shared/links"
