--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,8 @@
 %h1 Editing product
 
-= render 'form'
+%div.row.panel
+  %div.col-md-4
+    = render 'form'
 
-= link_to 'Show', category_product_path(category, product)
-\|
-= link_to 'Back', category_path(category)
+= link_to 'Show', category_product_path(category, product), class: 'btn btn-success'
+= link_to 'Back', category_path(category), class: 'btn btn-primary'
