--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -11,7 +11,7 @@
           %p
             Currently waiting confirmation for: #{resource.unconfirmed_email}
         = f.input :lastname, required: true
-        = f.input :password, required: true
+        = f.input :firstname, required: true
         = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
         = f.input :password_confirmation, required: false
         = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
