--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,18 +1,20 @@
 %h1= category.name
 
 %h3 Products in category
-
-%table.table.table-striped
-  %thead
-    %tr
-      %th Name
-      %th
-
-  %tbody
-    - category.products.each do |product|
+- unless category.products.empty?
+  %table.table.table-striped
+    %thead
       %tr
-        %td= product.title
-        %td= link_to 'Show', category_product_path(category, product), class: 'btn btn-success'
+        %th Name
+        %th
+
+    %tbody
+      - category.products.each do |product|
+        %tr
+          %td= product.title
+          %td= link_to 'Show', category_product_path(category, product), class: 'btn btn-success'
+-else
+  %div.alert.alert-warning No products found for this category.
 
 - if user_signed_in?
   %hr
