--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,7 @@
 %h1 New product
 
-= render 'form'
+%div.row.panel
+  %div.col-md-4
+    = render 'form'
 
-= link_to 'Back', category_products_path
+= link_to 'Back', category_products_path, class: 'btn btn-primary'
